# collvoid

./: .gitignore  .hgignore  .rosinstall  README.md  amcl.patch  collvoid.rosinstall  collvoid_depends.rosinstall  mapserver.launch  stack.xml  stage.patch
collvoid/: CMakeLists.txt  package.xml
collvoid_amcl/: CMakeLists.txt  package.xml
collvoid_amcl/src/: amcl_node.cpp
collvoid_controller/: CMakeLists.txt  goals.yaml  manifest.xml  package.xml  setup.py
collvoid_controller/nodes/: controller.py  controllerRobots.py  watchdog.py
collvoid_controller/src/collvoid_controller/: active_collision_avoidance.py  collvoid_visualizer.py  controller.py  controllerRobots.py  controller_robots.py  detect_obstacles.py  people_tracker.py  position_share_controller.py  watchdog.py
collvoid_dwa_local_planner/: CHANGELOG.rst  CMakeLists.txt  blp_plugin.xml  package.xml
collvoid_dwa_local_planner/cfg/: DWAPlanner.cfg
collvoid_dwa_local_planner/include/collvoid_dwa_local_planner/: dwa_planner.h  dwa_planner_ros.h  goal_alignment_cost_function.h  path_alignment_cost_function.h
collvoid_dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp  goal_alignment_cost_function.cpp  path_alignment_cost_function.cpp
collvoid_local_planner/: CMakeLists.txt  blp_plugin.xml  mainpage.dox  manifest.xml  package.xml
collvoid_local_planner/cfg/: Collvoid.cfg
collvoid_local_planner/include/collvoid_local_planner/: Agent.h  Definitions.h  ROSAgent.h  Utils.h  Vector2.h  clearpath.h  collvoid_local_planner.h  collvoid_publishers.h  collvoid_scoring_function.h  me_publisher.h  orca.h  pose_twist_aggregator.h  publisher_helpers.h
collvoid_local_planner/msg/: OrcaDebug.msg
collvoid_local_planner/nodes/: controllerTurtles.py  controllerWaypoints.py
collvoid_local_planner/src/: Agent.cpp  Agent.h  Definitions.h  Obstacle.cpp  ROSAgent.cpp  ROSAgent.h  clearpath.cpp  collvoid_local_planner.cpp  collvoid_publishers.cpp  collvoid_scoring_function.cpp  helper.cpp  me_publisher.cpp  orca.cpp  pose_twist_aggregator.cpp  publisher_helpers.cpp
collvoid_local_planner/srv/: GetCollvoidTwist.srv  InitGuess.srv
collvoid_msgs/: CMakeLists.txt  manifest.xml  package.xml
collvoid_msgs/msg/: AggregatedPoseTwist.msg  PoseArrayWeighted.msg  PoseTwistWithCovariance.msg
collvoid_simple_global_planner/: CMakeLists.txt  bgp_plugin.xml  mainpage.dox  manifest.xml  package.xml
collvoid_simple_global_planner/include/collvoid_simple_global_planner/: collvoid_simple_global_planner.h
collvoid_simple_global_planner/src/: collvoid_simple_global_planner.cpp
collvoid_stage/: CMakeLists.txt  double_view.vcg  mainpage.dox  manifest.xml  multi_view.rviz  package.xml  setup.py  single_view.rviz  single_view.vcg
collvoid_stage/bags/: evaluateArrows.py
collvoid_stage/launch/: amcl_diff_multi.launch  amcl_diff_single.launch  amcl_omni_multi.launch  amcl_omni_single.launch  move_base_collvoid.launch  move_base_collvoid_legacy.launch  move_base_dwa.launch  move_base_dwa_simple.launch  sim_single_pr2.launch  sim_single_turtle.launch  sim_single_turtle_dwa.launch  sim_test.launch
collvoid_stage/params/: collvoid_common.yaml  collvoid_config.yaml  collvoid_standalone.yaml  costmap_common_turtle.yaml  me_publisher_turtle.yaml  move_base_params_turtle.yaml  params_pr2.yaml  params_turtle.yaml  params_turtle_uncontrolled.yaml
collvoid_stage/scripts/: create.py  create_random_goals.py  evaluate.py  run_localization_with_radius_and_error.py  vo_based_avoidance.py
collvoid_stage/scripts/exp/: evaluate.py  evaluateArrows.py  evaluate_real.py  evaluate_spataps.py  run_experiments.py  run_localization_with_radius_and_noerror.py  run_only_ground_truth.py
collvoid_stage/world/: 10x10_map.pgm  10x10_map.yaml  10x10_template.world  5x5_map.pgm  5x5_map.yaml  5x5_template.world  swarmlab_map.yaml  swarmlab_orca_lines.yaml  swarmlab_single_pr2.world  swarmlab_single_turtle.world  swarmlab_template.world  willow_full.world
collvoid_turtlebot/: CMakeLists.txt  amcl_turtlebot.launch  amcl_turtlebot_map_from_topic.launch  goals.yaml  goals_3_created.yaml  goals_created.yaml  goals_tb_lab.yaml  greenroom.yaml  mainpage.dox  manifest.xml  map.pgm  map.yaml  orca_lines.yaml  orca_lines_greenroom.yaml  package.xml  paramsRobots.yaml  turtlebot.launch  turtlebot.urdf.xacro  turtlebot.xacro  turtlebot_master.launch  turtles.vcg
collvoid_turtlebot/launch/: amcl_turtlebot.launch  amcl_turtlebot_map_from_topic.launch  controller.launch  gmapping.launch  hokuyo.launch  kinect.launch  lcm_turtlebot.launch  minimal.launch  sim_single_turtle.launch  tracking_on_robot.launch  turtlebot.launch  turtlebot_master.launch  turtlebot_single.launch
collvoid_turtlebot/launch/includes/: laser_detectors.launch  lcm_controller.launch  leg_detectors.launch  move_base_collvoid.launch  move_base_collvoid_legacy.launch  move_base_dwa.launch
collvoid_turtlebot/launch/unused/: master_sync.launch
collvoid_turtlebot/map/: map.pgm  map.yaml  smartlab_arena.pgm  smartlab_arena.yaml
collvoid_turtlebot/params/: collvoid_config.yaml  config.yaml  costmap_common_params.yaml  costmap_common_turtle.yaml  move_base_params_turtle.yaml  multimaster_config.yaml  params_created.yaml  params_roomba.yaml  params_turtle.yaml  stage_params.yaml
collvoid_turtlebot/scripts/: lcm_relay_share.py  lcm_ros_relay.py  make_goals.py
collvoid_turtlebot/world/: aamas.pgm  aamas.yaml  greenroom_ext.pgm  greenroom_ext.yaml  hallway.yaml  map.pgm  map.yaml  maplarge.bak.pgm  maplarge.yaml  smartlab_single_turtle.world  swarmlab.pgm  swarmlab_rev2012.pgm
experimental/collvoid_pr2/: CMakeLists.txt  manifest.xml  package.xml  pr2_nav.vcg
experimental/pacman_controller/: CMakeLists.txt  mainpage.dox  manifest.xml  map_create.vcg  package.xml  pc_view.vcg
stage/: CMakeLists.txt  Makefile  Makefile.stage  Stage-3.2.2-Source.patch  Stage-3.2.2-Source.tar.gz.md5sum  manifest.xml  rosdep.yaml
stage/msg/: Stall.msg
stage/rviz/: stage.vcg
stage/src/: stageros.cpp
stage/test/: hztest.xml
stage/world/: willow-erratic.world  willow-four-erratics.world
(+113 files in other folders)
