<package>
    <name>collvoid_local_planner</name>
    <version>1.0.0</version>
    <description>collvoid local planner</description>
    <maintainer email="daniel.claes@maastrichtuniversity.nl">Daniel Claes</maintainer>

    <license>BSD</license>
    <license>proprietary license (RVO2)</license>

    <url type="website">http://ros.org/wiki/collvoid_local_planner</url>
    <!-- <url type="bugtracker"></url> -->

    <author>Daniel Claes</author>

    <!-- Dependencies which this package needs to build itself. -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- Dependencies needed to compile this package. -->
    <build_depend>roscpp</build_depend>
    <build_depend>roscpp_serialization</build_depend>
    <build_depend>rosconsole</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>costmap_2d</build_depend>

    <build_depend>roslib</build_depend>

    <build_depend>collvoid_msgs</build_depend>
    <build_depend>collvoid_srvs</build_depend>

    <build_depend>visualization_msgs</build_depend>
    <build_depend>laser_geometry</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>angles</build_depend>
    <build_depend>base_local_planner</build_depend>
    <build_depend>pluginlib</build_depend>
    <build_depend>nav_core</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>move_base_msgs</build_depend>
    <build_depend>std_srvs</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>amcl</build_depend>

    <!-- Dependencies needed after this package is compiled. -->
    <run_depend>roscpp</run_depend>
    <run_depend>roscpp_serialization</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>rosconsole</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>costmap_2d</run_depend>
    <run_depend>collvoid_srvs</run_depend>
    <run_depend>collvoid_msgs</run_depend>
    <run_depend>visualization_msgs</run_depend>
    <run_depend>laser_geometry</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>angles</run_depend>
    <run_depend>base_local_planner</run_depend>
    <run_depend>pluginlib</run_depend>
    <run_depend>nav_core</run_depend>
    <run_depend>actionlib</run_depend>
    <run_depend>move_base_msgs</run_depend>
    <run_depend>std_srvs</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>amcl</run_depend>

    <!-- Dependencies needed only for running tests. -->
    <!-- <test_depend>roscpp</test_depend> -->
    <!-- <test_depend>collvoid_msgs</test_depend> -->
    <!-- <test_depend>visualization_msgs</test_depend> -->
    <!-- <test_depend>laser_geometry</test_depend> -->
    <!-- <test_depend>tf</test_depend> -->
    <!-- <test_depend>angles</test_depend> -->
    <!-- <test_depend>base_local_planner</test_depend> -->
    <!-- <test_depend>pluginlib</test_depend> -->
    <!-- <test_depend>nav_core</test_depend> -->
    <!-- <test_depend>actionlib</test_depend> -->
    <!-- <test_depend>move_base_msgs</test_depend> -->
    <!-- <test_depend>std_srvs</test_depend> -->
    <!-- <test_depend>dynamic_reconfigure</test_depend> -->
    <!-- <test_depend>amcl</test_depend> -->

    <export>
        <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -lcollvoid_local_planner" cflags="-I${prefix}/include"/>
        <nav_core plugin="${prefix}/blp_plugin.xml"/>
    </export>
</package>