<package>
  <name>collvoid_msgs</name>
  <version>1.0.0</version>
  <description>collvoid_msg</description>
  <maintainer email="daniel.claes@maastrichtuniversity.nl">Daniel Claes</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/collvoid_msg</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Daniel Claes</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->

  <export>

  </export>
</package>